# lumina-docs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  GITHUB_SETUP.md  LICENSE  README.en.md  README.md  RENAME_SUMMARY.md  claude_desktop_config.conda.json  claude_desktop_config.example.json  claude_desktop_config.macos.json  claude_desktop_config.multi.json  docker-compose.example.yml  install_to_claude_desktop.sh  pyproject.toml  run_server.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: claude_desktop_integration.md
examples/: consistency_checker.py  demo.py  sample_data.py
src/doc_manager/: __init__.py  __main__.py  cli.py  config.py  database.py  markdown_parser.py  simple_server.py
