[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina-docs"
version = "1.0.0"
description = "Intelligent structured document management system using MCP protocol - specifically designed for large language models"
authors = [
    {name = "Lumina Docs Team"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mcp", "document-management", "llm", "claude", "structured-documents", "token-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Documentation",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
lumina-docs = "doc_manager.cli:main"

[project.urls]
Homepage = "https://github.com/lumina-docs/lumina-docs"
Repository = "https://github.com/lumina-docs/lumina-docs"
Issues = "https://github.com/lumina-docs/lumina-docs/issues"
Documentation = "https://github.com/lumina-docs/lumina-docs#readme"
Changelog = "https://github.com/lumina-docs/lumina-docs/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_manager"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true